tests/matrices/invalid/invalid_bad_value.mtx
%%MatrixMarket matrix coordinate double skew-symmetric
3 3 3
2 1 not_a_double
3 1 45
3 2 4
